// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de GifGrid Debe mostrar items cuando se carga imágenes 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    SAITAMA
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="124"
      key="124"
      title="Titulo"
      url="http://algo.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas de GifGrid Debe tener un snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    SAITAMA
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
